--- a/ksmserver/Cargo.toml
+++ b/ksmserver/Cargo.toml
@@ -13,3 +13,4 @@ tide = "0.16.0"
 async-std = { version = "1.12.0", features = ["attributes"] }
 chrono = { version = "0.4.38", features = ["serde"] }
 serde = { version = "1.0.201", features = ["derive"] }
+serde_urlencoded = "0.7.1"
