Changed article parser to use polars

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ output.csv
 testdata
 ksmparser/src/.measurement.rs.swp
 ksmserver/src/.main.rs.swp
+ksmparser/src/.article.rs.swp
+ksmserver/src/.main.rs.swp
