Now serving parameters

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ ksmparser/src/.measurement.rs.swp
 ksmserver/src/.main.rs.swp
 ksmparser/src/.article.rs.swp
 ksmserver/src/.main.rs.swp
+ksmserver/src/.main.rs.swp
