--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ ksmserver/src/.main.rs.swp
 ksmparser/src/.article.rs.swp
 ksmserver/src/.main.rs.swp
 ksmserver/src/.main.rs.swp
+ksmparser/src/.lib.rs.swp
