--- a/ksmparser/Cargo.toml
+++ b/ksmparser/Cargo.toml
@@ -9,3 +9,4 @@ polars = {version = "0.39.2", features = ["temporal"] }
 encoding_rs = "0.8.34"
 encoding_rs_io = "0.1.7"
 lazy_static = "1.4.0"
+maplit = "1.0.2"
