--- a/ksmserver/Cargo.toml
+++ b/ksmserver/Cargo.toml
@@ -15,3 +15,4 @@ polars-io = { version = "0.39.2", features = ["json"] }
 serde = { version = "1.0.201", features = ["derive"] }
 serde_urlencoded = "0.7.1"
 tide = "0.16.0"
+signal-hook = "0.3.17"
