--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ ksmparser/src/.article.rs.swp
 ksmserver/src/.main.rs.swp
 ksmserver/src/.main.rs.swp
 ksmparser/src/.lib.rs.swp
+ksmserver/src/.main.rs.swo
