Now encapsulating environment variables

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ ksmserver/src/.main.rs.swp
 ksmserver/src/.main.rs.swp
 ksmparser/src/.lib.rs.swp
 ksmserver/src/.main.rs.swo
+ksmserver/src/.lib.rs.swp
