--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ ksmserver/src/.main.rs.swp
 ksmparser/src/.lib.rs.swp
 ksmserver/src/.main.rs.swo
 ksmserver/src/.lib.rs.swp
+Dockerfile
+.Dockerfile.swp
