--- a/ksmserver/Cargo.toml
+++ b/ksmserver/Cargo.toml
@@ -16,3 +16,4 @@ serde = { version = "1.0.201", features = ["derive"] }
 serde_urlencoded = "0.7.1"
 tide = "0.16.0"
 signal-hook = "0.3.17"
+regex = "1.11.1"
