--- a/ksmserver/Cargo.toml
+++ b/ksmserver/Cargo.toml
@@ -6,14 +6,15 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-async-std = { version = "1.12.0", features = ["attributes"] }
-chrono = { version = "0.4.38", features = ["serde"] }
-dashmap = "5.5.3"
+async-std = { version = "1.13.0", features = ["attributes"] }
+chrono = { version = "0.4.40", features = ["serde"] }
+dashmap = "6.1.0"
 ksmparser = { path = "../ksmparser" }
-polars = {version = "0.39.2", features = ["lazy"]}
-polars-io = { version = "0.39.2", features = ["json"] }
-serde = { version = "1.0.201", features = ["derive"] }
+polars = {version = "0.46.0", features = ["lazy"]}
+polars-io = { version = "0.46.0", features = ["json"] }
+serde = { version = "1.0.219", features = ["derive"] }
 serde_urlencoded = "0.7.1"
 tide = "0.16.0"
 signal-hook = "0.3.17"
 regex = "1.11.1"
+#tikv-jemallocator = { version = "0.6.0" }
