--- a/ksmserver/Cargo.toml
+++ b/ksmserver/Cargo.toml
@@ -14,6 +14,7 @@ polars = {version = "0.46.0", features = ["lazy"]}
 polars-io = { version = "0.46.0", features = ["json"] }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_urlencoded = "0.7.1"
+serde_json = "1.0.140"
 tide = "0.16.0"
 signal-hook = "0.3.17"
 regex = "1.11.1"
