Added converted timestamp column when reading measurements

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     environment:
       KSM_ART_PATH: "/mnt/ksm/art" 
       KSM_DAT_PATH: "/mnt/ksm/data" 
+      TIMEZONE: "Europe/Stockholm"
     volumes:
       - /mnt/testksm:/mnt/ksm
     networks:
